# crumbs

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  pyproject.toml
crumbs/: __init__.py  __main__.py  cli.py  config.py
crumbs/analysis/: __init__.py  llm_sentiment.py  semantic.py  stats.py
crumbs/git/: __init__.py  parser.py  repository.py
crumbs/models/: __init__.py  dataclasses.py
crumbs/visualization/: __init__.py  charts.py  report.py
crumbs/visualization/templates/: landing.html  report.html
docs/: AI_FEATURES_PLAN.md
tests/: __init__.py  conftest.py  test_charts.py  test_cli.py  test_llm_sentiment.py  test_models.py  test_parser.py  test_repository.py  test_stats.py
