[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crumbs"
version = "0.1.0"
description = "A Python CLI tool to analyze git commits and generate visual reports"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "gitpython>=3.1",
    "plotly>=5.0",
    "jinja2>=3.0",
    "rich>=13.0",
    "kaleido>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
crumbs = "crumbs.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
